[package]
name = "tc-state-db"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-state-db"
description = "State database maintenance. Handles canonicalization and pruning in the database."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = "1.0.21"
parking_lot = "0.11.1"
log = "0.4.11"
tc-client-api = { version = "2.0.0", path = "../api" }
tet-core = { version = "2.0.2", path = "../../primitives/core" }
codec = { package = "tetsy-scale-codec", version = "2.0.1", features = ["derive"] }
tetsy-util-mem = { version = "0.9.0", default-features = false, features = ["tetsy-primitive-types"] }
tetsy-util-mem-derive = "0.1.0"
