[package]
name = "tc-sync-state-rpc"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "A RPC handler to create sync states for light clients."
edition = "2018"
license = "Apache-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-sync-state-rpc"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = "1.0.21"
tetsy-jsonrpc-core = "15.0"
tetsy-jsonrpc-core-client = "15.0"
tetsy-jsonrpc-derive = "15.0"
tc-chain-spec = { version = "2.0.0", path = "../chain-spec" }
tc-client-api = { version = "2.0.0", path = "../api" }
tc-consensus-babe = { version = "0.8.0", path = "../consensus/babe" }
tc-consensus-epochs = { version = "0.8.0", path = "../consensus/epochs" }
tc-finality-grandpa = { version = "0.8.0", path = "../finality-grandpa" }
tc-rpc-api = { version = "0.8.0", path = "../rpc-api" }
serde_json = "1.0.58"
tp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
