[package]
name = "tc-telemetry"
version = "2.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Telemetry utils"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/tc-telemetry"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
parking_lot = "0.11.1"
futures = "0.3.9"
wasm-timer = "0.2.5"
tetsy-libp2p = { version = "0.34.2", default-features = false, features = ["dns", "tcp-async-io", "wasm-ext", "websocket"] }
log = "0.4.8"
pin-project = "1.0.7"
rand = "0.7.2"
serde = { version = "1.0.101", features = ["derive"] }
take_mut = "0.2.2"
void = "1.0.2"
tracing = "0.1.10"
tracing-subscriber = "0.2.13"
serde_json = "1.0.41"
tetcore-utils = { version = "2.1.2", path = "../../primitives/utils" }
chrono = "0.4.19"
