[package]
name = "tc-tracing"
version = "2.0.1"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Instrumentation implementation for tetcore."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.13"
erased-serde = "0.3.9"
lazy_static = "1.4.0"
log = { version = "0.4.8" }
once_cell = "1.4.1"
parking_lot = "0.11.1"
regex = "1.4.2"
rustc-hash = "1.1.0"
serde = "1.0.101"
serde_json = "1.0.41"
thiserror = "1.0.21"
tracing = "0.1.22"
tracing-core = "0.1.17"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
tp-tracing = { version = "2.0.0", path = "../../primitives/tracing" }
tc-telemetry = { version = "2.0.0", path = "../telemetry" }
tc-tracing-proc-macro = { version = "2.0.0", path = "./proc-macro" }

[target.'cfg(target_os = "unknown")'.dependencies]
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3.44", features = ["console"] }
