[package]
name = "sc-transaction-pool"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/tetcoin/tetcore"
repository = "https://github.com/tetcoin/tetcore/"
description = "Tetcore transaction pool implementation."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "tetsy-scale-codec", version = "2.0.0" }
thiserror = "1.0.21"
futures = { version = "0.3.1", features = ["compat"] }
futures-diagnose = "1.0"
intervalier = "0.4.0"
log = "0.4.8"
tetsy-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }
parking_lot = "0.11.1"
prometheus-endpoint = { package = "tetcore-prometheus-endpoint", path = "../../utils/prometheus", version = "0.8.0"}
sc-client-api = { version = "2.0.0", path = "../api" }
sc-transaction-graph = { version = "2.0.0", path = "./graph" }
tc-api = { version = "2.0.0", path = "../../primitives/api" }
tc-core = { version = "2.0.0", path = "../../primitives/core" }
tc-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
tc-tracing = { version = "2.0.0", path = "../../primitives/tracing" }
tc-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
tc-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
tc-utils = { version = "2.0.0", path = "../../primitives/utils" }
wasm-timer = "0.2"

[dev-dependencies]
assert_matches = "1.3.0"
hex = "0.4"
tc-keyring = { version = "2.0.0", path = "../../primitives/keyring" }
tc-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
tetcore-test-runtime-transaction-pool = { version = "2.0.0", path = "../../test-utils/runtime/transaction-pool" }
tetcore-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
sc-block-builder = { version = "0.8.0", path = "../block-builder" }
