[package]
name = "noble-assets"
version = "2.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
documentation = "https://docs.rs/noble-assets"
description = "FABRIC asset management noble"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false }
tetcore-std = { version = "2.1.2", default-features = false, path = "../../primitives/std" }
# Needed for various traits. In our case, `OnFinalize`.
tp-runtime = { version = "2.1.2", default-features = false, path = "../../primitives/runtime" }
# Needed for type-safe access to storage DB.
fabric-support = { version = "2.1.2", default-features = false, path = "../support" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
fabric-system = { version = "2.1.2", default-features = false, path = "../system" }
fabric-benchmarking = { version = "2.1.2", default-features = false, path = "../benchmarking", optional = true }

[dev-dependencies]
tet-core = { version = "2.1.2", path = "../../primitives/core" }
tetcore-std = { version = "2.1.2", path = "../../primitives/std" }
tet-io = { version = "2.1.2", path = "../../primitives/io" }
noble-balances = { version = "2.1.2", path = "../balances" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"tetcore-std/std",
	"tp-runtime/std",
	"fabric-support/std",
	"fabric-system/std",
	"fabric-benchmarking/std",
]
runtime-benchmarks = [
	"fabric-benchmarking",
	"tp-runtime/runtime-benchmarks",
	"fabric-system/runtime-benchmarks",
]
